--- a/src/main.css
+++ b/src/main.css
@@ -91,6 +91,26 @@
 .chat-item-top {
   flex-basis: 10%;
   background-color: rgb(255, 255, 255);
+  display: flex;
+}
+
+.chat-item-top > button {
+  background-color: white;
+  border-radius: 5px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  padding: 20px;
+  border: none;
+  height: 100%;
+  text-align: center;
+  flex: 2;
+  
+}
+
+.chat-item-top > button:hover {
+  background-color: #3d3d3d;
+  color: white;
+  transition: 0.2s;
 }
 
 .chat-main {
