--- a/src/main.css
+++ b/src/main.css
@@ -24,6 +24,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
+  /* position: absolute; */
 }
 
 .list-logo {
@@ -104,7 +105,6 @@
   height: 100%;
   text-align: center;
   flex: 2;
-  
 }
 
 .chat-item-top > button:hover {
@@ -260,4 +260,11 @@
 .Login-btn > p {
   font-size: 16px;
   margin: 0;
+}
+
+.login-btn.set {
+  /* position: relative; */
+  /* width: 100%; */
+  /* overflow: hidden; */
+  flex-basis: 10%;
 }
