--- a/src/main.css
+++ b/src/main.css
@@ -96,7 +96,7 @@
 }
 
 .chat-item-top > button {
-  background-color: white;
+  background-color: rgb(202, 202, 202);
   border-radius: 5px;
   color: rgb(0, 0, 0);
   font-weight: bold;
