유효성검사 완료 및 connecterlist 컴포넌트 분리 / socket.io 미들웨어 구현 준비완료

--- a/src/main.css
+++ b/src/main.css
@@ -251,6 +251,11 @@
   justify-content: center;
 }
 
+.Login-btn > p {
+  font-weight: bold;
+  font-size: 20px;
+}
+
 .Login-btn:hover {
   background-color: #7c7c7c;
   color: #fff;
